k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: veckopeng
  labels:
    app: veckopeng
