k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: veckopeng-svc
  namespace: veckopeng
  labels:
    app: veckopeng
spec:
  selector:
    app: veckopeng
    component: app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: veckopeng
  labels:
    app: veckopeng
    component: postgres
spec:
  selector:
    app: veckopeng
    component: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
